# OpenTelemetry

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/error/: mod.rs
src/handlers/: database_operations.rs  health_check.rs  mod.rs
src/models/: User.rs  mod.rs  user.rs
src/routes/: mod.rs
